--- a/inventory-service/src/main/resources/application-docker.properties
+++ b/inventory-service/src/main/resources/application-docker.properties
@@ -1,8 +1,8 @@
+server.port=8080
+spring.datasource.url=jdbc:postgresql://postgres:5432/inventory-service
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:mysql://postgres:5432/inventory-service
 spring.datasource.username=kasunpg
 spring.datasource.password=password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.zipkin.base-url=http://zipkin:9411
-server.port=8080
 eureka.client.serviceUrl.defaultZone=http://eureka:password@discovery-server:8761/eureka
-
