--- a/order-service/src/main/resources/application-docker.properties
+++ b/order-service/src/main/resources/application-docker.properties
@@ -1,8 +1,9 @@
+server.port=8080
+spring.datasource.url=jdbc:postgresql://postgres:5431/order-service
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgres://postgres:5431/order-service
 spring.datasource.username=kasunpg
 spring.datasource.password=password
-server.port=8080
-eureka.client.serviceUrl.defaultZone=http://discovery-server:8761/eureka
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.zipkin.base-url=http://zipkin:9411
+eureka.client.serviceUrl.defaultZone=http://eureka:password@discovery-server:8761/eureka
 spring.kafka.bootstrap-servers=broker:29092
