--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -54,5 +54,16 @@
             <artifactId>zipkin-reporter-brave</artifactId>
         </dependency>
 
+        <!--Observations-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
