--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -30,3 +30,5 @@ spring.cloud.gateway.routes[4].predicates[0]=Path=/eureka/**
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8550/realms/spring-boot-microservices-realm
 
 management.tracing.sampling.probability=1.0
+
+management.endpoints.web.exposure.include=prometheus
