--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -7,3 +7,4 @@ eureka.username=${EUREKA_USERNAME:eureka}
 eureka.password=${EUREKA_PASSWORD:password}
 
 management.tracing.sampling.probability=1.0
+logs
