--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -9,3 +9,5 @@ eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eurek
 spring.application.name=inventory-service
 
 management.tracing.sampling.probability=1.0
+
+management.endpoints.web.exposure.include=prometheus
