--- a/notificiation-service/src/main/resources/application.properties
+++ b/notificiation-service/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.type.mapping=event:kasun.dev.notificationservice.OrderPlacedEvent
 
+management.endpoints.web.exposure.include=prometheus
