--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.application.name=product-service
 server.port=0
 
 management.tracing.sampling.probability=1.0
+
+management.endpoints.web.exposure.include=prometheus
